# semantic_cartography

./: Makefile  README.md  llm_classification.md
exploring_distances/: ada-002.results  pyproject.toml  test.py
hierarchies/: pyproject.toml  test_hierarchies.py
lex_categories/: uk-lex-schema.json
